<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">baseball</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start">開始</string>
    <string name="restart">重新開始</string>
    <string name="conn">連線</string>
    <string name="strike">好球</string>
    <string name="bull">壞球</string>
    <string name="title_activity_result">Result</string>
    <string name="title_activity_login_grade">MainActivity</string>
    <string name="login">登入&amp;查看</string>

</resources>
