<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/abso"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/filed3"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="181dp"
        android:layout_y="69dp"
        android:text="@string/hello_world" />

    <RelativeLayout
        android:layout_width="133dp"
        android:layout_height="77dp"
        android:layout_x="156dp"
        android:layout_y="93dp" >

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="32dp"
            android:layout_height="26dp"
            android:layout_alignParentTop="true"
            android:src="@drawable/nonred" />

        <ImageView
            android:id="@+id/ImageView01"
            android:layout_width="32dp"
            android:layout_height="26dp"
            android:layout_alignBottom="@+id/imageView4"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/imageView4"
            android:src="@drawable/nonred" />

        <ImageView
            android:id="@+id/ImageView02"
            android:layout_width="32dp"
            android:layout_height="26dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/nonred" />

        <ImageView
            android:id="@+id/ImageView03"
            android:layout_width="32dp"
            android:layout_height="26dp"
            android:layout_alignBottom="@+id/ImageView01"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/ImageView01"
            android:src="@drawable/nonred" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="44dp"
            android:layout_height="38dp"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/imageView4"
            android:layout_below="@+id/imageView4"
            android:src="@drawable/nonyelb" />

        <ImageView
            android:id="@+id/ImageView04"
            android:layout_width="44dp"
            android:layout_height="38dp"
            android:layout_alignBottom="@+id/imageView3"
            android:layout_alignRight="@+id/ImageView01"
            android:layout_alignTop="@+id/imageView3"
            android:layout_toRightOf="@+id/imageView3"
            android:src="@drawable/nonyelb" />

        <ImageView
            android:id="@+id/ImageView05"
            android:layout_width="44dp"
            android:layout_height="38dp"
            android:layout_alignBottom="@+id/ImageView04"
            android:layout_alignRight="@+id/ImageView03"
            android:layout_below="@+id/ImageView01"
            android:layout_toRightOf="@+id/ImageView01"
            android:src="@drawable/nonyelb" />

        <ImageView
            android:id="@+id/ImageView06"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignBottom="@+id/ImageView05"
            android:layout_toRightOf="@+id/ImageView05"
            android:src="@drawable/nonyelb" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="291dp"
        android:layout_y="132dp"
        android:text="@string/bull" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="236dp"
        android:layout_y="265dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="290dp"
        android:layout_y="96dp"
        android:text="@string/strike" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="226dp"
        android:layout_y="203dp"
        android:text="Button" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_x="13dp"
        android:layout_y="304dp"
        android:src="@drawable/hit" />

    <Button
        android:id="@+id/button3"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="234dp"
        android:layout_y="2dp"
        android:text="@string/restart" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="55dp"
        android:layout_x="107dp"
        android:layout_y="1dp"
        android:text="@string/conn" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="171dp"
        android:layout_y="2dp"
        android:text="@string/start" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="92dp"
        android:layout_height="80dp"
        android:layout_x="17dp"
        android:layout_y="160dp"
        android:src="@drawable/baseball256" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="83dp"
        android:layout_y="270dp"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</AbsoluteLayout>